# obsdian_drive_sync

./: README.md  main.py  pyproject.toml
_notes/: notes.md
