[project]
name = "obsdian-drive-sync"
version = "0.1.0"
description = "A Python tool to automatically sync my Obsidian vault to Google Drive using the Google Drive API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
]
